crates/cribo/tests/snapshots/bundled_code@symbol_collision_inheritance.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/symbol_collision_inheritance/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class HTTPBasicAuth_1:
    """Different implementation of HTTPBasicAuth to create collision."""

    def __init__(self, token):
        self.token = token
        self.type = "token"

    def __repr__(self):
        return f"<HTTPBasicAuth(token) token={self.token[:4]}...>"
class AuthBase:
    """Base authentication class."""

    def __init__(self):
        self.type = "base"

    def __repr__(self):
        return f"<{self.__class__.__name__}>"
class HTTPBasicAuth_2(AuthBase):
    """Basic HTTP authentication."""

    def __init__(self, username, password):
        super().__init__()
        self.username = username
        self.password = password
        self.type = "basic"

    def __repr__(self):
        return f"<HTTPBasicAuth user={self.username}>"
class HTTPProxyAuth(HTTPBasicAuth_2):
    """Proxy HTTP authentication - inherits from HTTPBasicAuth."""

    def __init__(self, username, password):
        super().__init__(username, password)
        self.type = "proxy"

    def __repr__(self):
        return f"<HTTPProxyAuth user={self.username}>"
def make_auth(auth_type, username, password):
    """Factory function that uses the classes."""
    if auth_type == "basic":
        return HTTPBasicAuth_2(username, password)
    elif auth_type == "proxy":
        return HTTPProxyAuth(username, password)
    else:
        return AuthBase()
HTTPBasicAuth_1.__module__ = 'colliding_module'
HTTPBasicAuth_1.__name__ = 'HTTPBasicAuth'
HTTPBasicAuth_1.__qualname__ = 'HTTPBasicAuth'
"""Another module that exports HTTPBasicAuth to create a collision."""
AuthBase.__module__ = 'auth_module'
HTTPBasicAuth_2.__module__ = 'auth_module'
HTTPBasicAuth_2.__name__ = 'HTTPBasicAuth'
HTTPBasicAuth_2.__qualname__ = 'HTTPBasicAuth'
HTTPProxyAuth.__module__ = 'auth_module'
"""Module with classes that will have naming collision."""
"""Test symbol collision with class inheritance."""
HTTPBasicAuth = HTTPBasicAuth_2
proxy_auth = HTTPProxyAuth("user", "pass")
print(f"Created HTTPProxyAuth: {proxy_auth}")
print(f"HTTPProxyAuth.__bases__: {HTTPProxyAuth.__bases__}")
auth = make_auth("proxy", "user2", "pass2")
print(f"Factory created auth: {auth}")
print("✓ All tests passed")
