crates/cribo/tests/snapshots/bundled_code@xfail_alias_transformation_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_alias_transformation_test/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""\nTest case for alias transformation functionality.\n\nThis script demonstrates the issue where import aliases are not being transformed properly.\nWithout the transformer logic, the bundled output will contain both:\n1. Alias assignments (generated by generate_alias_assignments)\n2. Original import statements (that should be removed/transformed)\n\nThis creates redundant code and potentially confusing output.\n"""
import math
import sys
if __name__ == "__main__":
    main()
def main():
    """Main function that uses the imported modules with their aliases."""
    data = json.dumps({"test": "data"})
    print(f"JSON data: {data}")
    dir_hash = hashlib.md5(b"test_directory").hexdigest()[:8]
    print(f"Current directory: /test/deterministic/{dir_hash}")
    env_var = os.environ.get("CRIBO_TEST", "default_value")
    print(f"CRIBO_TEST environment: {env_var}")
    python_version_info = sys.version_info
    print(f"Python version: {python_version_info.major}.{python_version_info.minor}")
    processed = process_a([1, 2, 3, 4, 5])
    formatted = format_a(processed)
    print(f"Processed and formatted: {formatted}")
    config = config_a("settings.json")
    print(f"Loaded config: {config}")
    result = math.sqrt(16)
    deterministic_num = int(hashlib.md5(b"alias_transformation_test").hexdigest()[:2], 16)
    print(f"Math result: {result}, Deterministic: {deterministic_num}")
    helper_result = helper_func("test")
    debug_a(f"Helper result: {helper_result}")
from utils.config_manager import load_config as config_a
import os
from utils.helpers import helper_func, debug_print as debug_a
from utils.data_processor import format_output as format_a
import json
if __name__ == "__main__":
    main()
import hashlib
from utils.data_processor import process_data as process_a
"""\nHelper utilities module.\nUsed to test mixed from-import scenarios (some aliased, some not).\n"""
def another_helper():
    """Another helper function (not imported)."""
    return "Another helper result"
def helper_func(input_str):
    """A helper function that processes a string."""
    return f"Processed: {input_str.upper()}"
def debug_print(message):
    """Debug printing function (will be imported with alias)."""
    print(f"[DEBUG] {message}")
"""\nData processing utilities module.\nUsed to test from-import alias transformations.\n"""
def unaliased_function():
    """This function is not imported with an alias."""
    return "Not imported with alias"
def process_data(data_list):
    """Process a list of data by doubling each element."""
    return [x * 2 for x in data_list]
def format_output(processed_data):
    """Format processed data as a comma-separated string."""
    return ", ".join(map(str, processed_data))
"""\nConfiguration management utilities.\nUsed to test from-import alias transformations.\n"""
def save_config(config_data, config_file):
    """Save configuration to a file (simulated)."""
    return f"Config saved to {config_file}"
def load_config(config_file):
    """Load configuration from a file (simulated)."""
    return {"file": config_file, "loaded": True, "settings": {"debug": False}}
