crates/cribo/tests/snapshots/bundled_code@xfail_ast_rewriting_class_name_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_ast_rewriting_class_name_collision/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
models = types.SimpleNamespace()
entities = types.SimpleNamespace()
EntityUser = entities.User
EntityProduct = entities.Product
ModelUser = models.User
ModelProduct = models.Product
"""\nClass name collision test.\nBoth modules define classes with the same names.\n"""
def main():
    model_user = ModelUser("Alice", "alice@example.com")
    entity_user = EntityUser("Bob", 25)
    model_product = ModelProduct("Widget", 19.99)
    entity_product = EntityProduct("P001", "Gadget")
    print(f"Model User: {model_user}")
    print(f"Entity User: {entity_user}")
    print(f"Model Product: {model_product}")
    print(f"Entity Product: {entity_product}")
    return {"model_user": str(model_user), "entity_user": str(entity_user), "model_product": str(model_product), "entity_product": str(entity_product)}
if __name__ == "__main__":
    result = main()
    print("Result:", result)
if __name__ == "__main__":
    result = main()
    print("Result:", result)
if __name__ == "__main__":
    result = main()
    print("Result:", result)
